fix: image not showing and add about

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,300&display=swap');
 body {
   margin: 0;
-  height: 100%;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,7 +14,8 @@ code {
 .background {
   z-index: -1;
   top: 0;
-  height: 1200px;
+  height: 100%!important;
+  overflow: auto;
   width: 100%;
   position: absolute!important;
   background: linear-gradient(#02528a, #01021c);
